# the-elements

./: .travis.yml  Cargo.toml  README.md  openocd.gdb
.cargo/: config
.github/workflows/: ci.yml
src/: clock.rs  main.rs  rcc.rs  ts.rs
