[package]
name = "the-elements"
version = "0.0.0"
authors = []

[dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-abort = "0.3"
panic-halt = "0.2"

[[bin]]
name = "the-elements"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
debug = true
